# ChangeLog for dev-db/knoda
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/knoda/Attic/ChangeLog,v 1.15 2004/06/24 21:55:02 agriffis Exp $

  17 May 2004; Caleb Tennis <caleb@gentoo.org> -knoda-0.6.1.ebuild,
  -knoda-0.6.3_alpha1.ebuild:
  Version bump, remove old versions

  16 May 2004; Dominik Stadler <centic@gentoo.org> knoda-0.6.2a.ebuild:
  Remove obsolete definition of Variable S.

  25 Mar 2004; Martin Holzer <mholzer@gentoo.org> knoda-0.6.1.ebuild,
  knoda-0.6.2a.ebuild, knoda-0.6.3_alpha1.ebuild, knoda-0.6.3_alpha3.ebuild:
  fixing src_uri. closes 45629

  18 Mar 2004; David Holm <dholm@gentoo.org> knoda-0.6.3_alpha3.ebuild:
  Added to ~ppc.

*knoda-0.6.3_alpha3 (15 Mar 2004)

  15 Mar 2004; Caleb Tennis <caleb@gentoo.org> knoda-0.6.3_alpha3.ebuild:
  Version bump

*knoda-0.6.3_alpha1 (27 Dec 2003)

  27 Dec 2003; Caleb Tennis <caleb@gentoo.org> knoda-0.6.3_alpha1.ebuild:
  new alpha version

*knoda-0.6.2a (06 Dec 2003)

  06 Dec 2003; Caleb Tennis <caleb@gentoo.org> knoda-0.6.1_alpha3.ebuild,
  knoda-0.6.2a.ebuild, knoda-0.6.ebuild:
  New version - by Peter Ruskin.  Bug #35161

*knoda-0.6.1 (20 Oct 2003)

  20 Oct 2003; Caleb Tennis <caleb@gentoo.org> knoda-0.6.1.ebuild:
  Version bump - thanks to Peter Ruskin (bug #31523)

*knoda-0.6.1_alpha3 (02 Oct 2003)

  02 Oct 2003; Caleb Tennis <caleb@gentoo.org> knoda-0.6.1_alpha3.ebuild:
  new version

  17 Jun 2003; Caleb Tennis <caleb@gentoo.org> :
  Removed older ebuilds (knoda-0.6_pre3 and knoda-0.5.6)

*knoda-0.6 (28 May 2003)

  28 May 2003; Caleb Tennis <caleb@gentoo.org> knoda-0.6.ebuild:
  Version bump, ebuild with minor mods from Peter Ruskin (bug #20981)

*knoda-0.6_pre3 (24 Apr 2003)

  24 Apr 2003; Paul de Vrieze <pauldv@gentoo.org> Manifest, knoda-0.5.6.ebuild,
  knoda-0.6_pre3.ebuild:
  New version of knoda that works around some segfaults caused by newer kde libs.