@@ -1,7 +1,7 @@
-MD5 cc44c96be158e668b691417f5ac0d34b knoda-0.6.3_alpha3.ebuild 585
-MD5 14a6e978c396c48c56c5e037f45584fb knoda-0.6.2a.ebuild 524
-MD5 fd748d8ac20d84bd2e63fba54ad80d23 knoda-0.7_alpha1.ebuild 587
-MD5 0c76a873bd14068d6bcefc7c1c55c935 ChangeLog 2291
+MD5 2b932035c951f277cbdd3435184a426e knoda-0.6.3_alpha3.ebuild 548
+MD5 0a173a22d955e46aff8ed0954b1b99dd knoda-0.6.2a.ebuild 487
+MD5 790c6c7ee2ab7e2a6966782fa14bda59 knoda-0.7_alpha1.ebuild 547
+MD5 724f8240b3a88dc1e68ac094af15cde2 ChangeLog 2514
 MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
 MD5 ddfe62e8ef34851bab8c8445153f785c files/digest-knoda-0.6.3_alpha3 70
 MD5 c0170e36d2d0368a98e3e283370cbbe1 files/digest-knoda-0.7_alpha1 68
