@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/knoda
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/knoda/Attic/ChangeLog,v 1.15 2004/06/24 21:55:02 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/knoda/Attic/ChangeLog,v 1.16 2004/06/28 23:47:09 carlo Exp $
+
+*knoda-0.7_alpha1 (29 Jun 2004)
+
+  29 Jun 2004; Carsten Lohrke <carlo@gentoo.org> knoda-0.6.2a.ebuild,
+  knoda-0.6.3_alpha3.ebuild, knoda-0.7_alpha1.ebuild:
+  QA: kde-base -> kde, need-kde after R/DEPEND, newdepend -> DEPEND
 
   17 May 2004; Caleb Tennis <caleb@gentoo.org> -knoda-0.6.1.ebuild,
   -knoda-0.6.3_alpha1.ebuild:
